Add POST /v3/shipments/{id}/items endpoint
